# ByteBlog

./: .gitignore  AGENTS.md  CLAUDE.md  ENV_SETUP.md  README.md
project-ai-agent/: .env.example  agent_langgraph_guide.md  main.py  pyproject.toml  requirements.txt
project-ai-agent/agents/: __init__.py  research_agent.py  smart_agent.py  writing_agent.py
project-ai-agent/agents/sub_agents/: __init__.py  code_execution_agent.py  knowledge_agent.py  search_agent.py  tools.py
project-ai-agent/api/: __init__.py  chat_router.py  knowledge_router.py  memory_router.py  research_router.py  skill_router.py  writing_router.py
project-ai-agent/common/: __init__.py  constants.py  elasticsearch_base.py  time_context.py  user_context.py
project-ai-agent/config/: __init__.py  settings.py
project-ai-agent/config/prompts/: __init__.py  research_prompts.py  smart_agent_prompts.py  sub_agent_prompts.py  writing_prompts.py
project-ai-agent/docs/: smart_agent.md  writing_agent.md
project-ai-agent/mcp_service/: __init__.py  firecrawl_service.py  judge0_service.py
project-ai-agent/models/: __init__.py  research_models.py  schemas.py  writing_models.py
project-ai-agent/scripts/: __init__.py  index_skills.py
project-ai-agent/services/: __init__.py
project-ai-agent/services/business/: __init__.py  base_client.py  blog_service.py  chat_service.py  memory_service.py  research_service.py  user_service.py  web_scraper_service.py
project-ai-agent/services/core/: __init__.py  embedding_service.py  llm_utils.py  long_term_memory_service.py  memory_service.py  nacos_service.py
project-ai-agent/services/skill/: __init__.py  chunker.py  loader.py  models.py
project-ai-agent/services/store/: __init__.py  document_service.py  es_article_service.py  es_author_service.py  parent_store.py
project-ai-agent/skills/: __init__.py  loader.py
project-ai-agent/skills/smart-chat/: SKILL.md
project-ai-agent/tools/: __init__.py  article_tool.py  author_tool.py  blog_tool.py  code_execution_tool.py  common_tool.py  firecrawl_tool.py  memory_tool.py  skill_tool.py  smart_search_tool.py  user_tool.py  vector_tool.py  web_scraper_tool.py  writing_tool.py
project-ai-agent/vectorstore/: pgvector_store.py  skill_vector_store.py
(+1115 files in other folders)
